sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Item__c/Inventory_Requisition_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Requisition Item</label>
    <nameField>
        <displayFormat>IRI-{0000000}</displayFormat>
        <label>Inventory Requisition Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Requisition Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>