sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Requisition Items</relationshipLabel>
    <relationshipName>Inventory_Requisition_Items</relationshipName>
    <type>Lookup</type>
</CustomField>