sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Item__c/fields/Inventory_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Requisition__c</fullName>
    <label>Inventory Requisition</label>
    <referenceTo>Inventory_Requisition__c</referenceTo>
    <relationshipLabel>Inventory Requisition Items</relationshipLabel>
    <relationshipName>Inventory_Requisition_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>