sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Item__c/fields/Issued_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Issued_Quantity__c</fullName>
    <label>Issued Quantity</label>
    <summarizedField>Inventory_Requisition_Issuance__c.Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Requisition_Issuance__c.Inventory_Requisition_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>