sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Item__c/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining__c</fullName>
    <formula>Quantity__c -  Issued_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>