sfSandBoxCode/force-app/main/default/objects/Inventory_Requisition_Item__c/validationRules/glaShouldNotStartWith1410.validationRule-meta.xml
<ValidationRule>
    <fullName>glaShouldNotStartWith1410</fullName>
    <active>true</active>
    <description>Checks if gla starts with 1410. if true throw an error</description>
    <errorConditionFormula>CONTAINS(LEFT(  GLA__r.Name ,4),&quot;1410&quot;)</errorConditionFormula>
    <errorDisplayField>GLA__c</errorDisplayField>
    <errorMessage>Please Select A different GLA</errorMessage>
</ValidationRule>